[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/ColorRect.gd" type="Script" id=1]

[sub_resource type="GDScript" id=1]
script/source = "extends Control

# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"
var position
# Called when the node enters the scene tree for the first time.
func _ready():
	position = Vector2(rect_position.x -5, rect_position.y - 3)
	
func _draw():
	draw_circle(position,3,Color(0,0,1,1))

# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="CircleShape2D" id=2]
radius = 1.0

[node name="Segment" type="ColorRect" groups=[
"Segment",
]]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -10.0262
margin_top = -159.547
margin_right = -0.0262146
margin_bottom = -155.547
rect_rotation = 359.999
rect_pivot_offset = Vector2( 5.01312, -0.22644 )
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
script = SubResource( 1 )

[node name="AreaLeft" type="Area2D" parent="Control"]
position = Vector2( 5.02618, -0.0466309 )
rotation = -3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/AreaLeft"]
position = Vector2( 9.06332, -0.0299072 )
shape = SubResource( 2 )
one_way_collision = true
one_way_collision_margin = 0.0

[node name="AreaRight" type="Area2D" parent="Control"]
position = Vector2( 5.0799, 0.0600586 )
rotation = 3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/AreaRight"]
position = Vector2( 0.945527, 0.0238037 )
shape = SubResource( 2 )
one_way_collision = true
one_way_collision_margin = 0.0
[connection signal="area_entered" from="Control/AreaLeft" to="." method="_on_AreaLeft_area_entered"]
[connection signal="area_entered" from="Control/AreaRight" to="." method="_on_AreaRight_area_entered"]
